--- a/package.json
+++ b/package.json
@@ -1,10 +1,12 @@
 {
-  "name": "react-hooks-and-matterjs-step-three",
+  "name": "award-giver",
   "version": "1.0.0",
   "description": "",
   "keywords": [],
   "main": "src/index.js",
+  "homepage": "https://kyleroush.github.io/award-giver/",
   "dependencies": {
+    "firebase": "^10.7.1",
     "matter-js": "0.17",
     "react": "18.0",
     "react-dom": "18.0",
